// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Renders with defaults 1`] = `
<button
  class="button button--primary"
  data-testid="button"
  type="button"
/>
`;

exports[`Button component Renders with props 1`] = `
<button
  class="button button--primary"
  data-testid="button"
  type="submit"
>
  Button
</button>
`;
